--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -7,14 +7,14 @@
 </head>
 <body>
 <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#">Home</a></li>
-    <li role="presentation"><a href="/heroes">See All Heroes</a></li>
-    <li role="presentation"><a href="/heroes/new">Add a New Hero</a></li>
+    <li role="presentation" class="active"><a href="#">HOME</a></li>
+    <li role="presentation"><a href="/hero">HEROES</a></li>
+    <li role="presentation"><a href="/squad">SQUADS</a></li>
 </ul>
 <div class="container">
     <!--begin main template-->
     <div class="page-header">
-        <img src="/images/java.jpg" width="70%">
+        <img src="/images/" width="70%">
         <h1>Anyone can be A HERO. <small>Just try!</small></h1>
     </div>
 
