update layout and index

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -14,7 +14,7 @@
 <div class="container">
     <!--begin main template-->
     <div class="page-header">
-        <img src="/images/" width="70%">
+       <!-- <img src="/images/choiceA.jpg" width="80%">-->
         <h1>Anyone can be A HERO. <small>Just try!</small></h1>
     </div>
 
