--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -2,20 +2,20 @@
 
     <h1>Hero list!</h1>
 
-    {{#if posts}} <!--if posts exist, then -->
-    {{#each posts }} <!--loop-->
+    {{#if posts}}
+    {{#each posts }}
     <p>Current heroes:</p>
-    <p>{{ content }} <a href="/hero/{{id}}">read more...</a></p> <!--show-->
+    <p>{{ content }} <a href="/hero/{{id}}">read more...</a></p>
     {{/each}}
-    {{else}} <!--no posts!-->
+    {{else}}
     {{/if}}
 
     <form action="/hero/new" method="POST">
-        <!--<a href="/hero-form"><button class="">Create Hero</button></a>
+        <!--<button class="">Create Hero</button></a>
         <label for="content">Post Content</label>
         <input id="content" name="content" type="text">-->
 
-        <button type="submit" class="btn btn-default">Add your hero</button>
+        <button type="submit" class="btn btn-default"><a href="/hero-form">Add your hero</a></button>
     </form>
 {{/partial}}
 
