--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -1,6 +1,6 @@
 {{#partial "content"}}
 
-    {{#if editPost}}
+    {{#if editHero}}
         <h1>Edit this hero!</h1>
         <form action="/hero/{{editHero.id}}/update" method="post">
             <label for="heroDetails">Edit this hero's details</label>
