--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -29,6 +29,7 @@
     <footer class="footer">
         <div class="container">
             <p class="text-muted"><a href="/hero/delete">DELETE ALL HEROES</a></p>
+            <p class="text-muted"><a href="/squad/delete">DELETE ALL SQUADS</a></p>
         </div>
     </footer>
     </body>
