--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -3,8 +3,8 @@
     <h3>Success! <br>  <span>{{ item }} </span> <br> Has been created <br>{{sqId}}</h3>
 
     Your blog post has been saved.
-    <a class="btn btn-green" href="/hero">View Heroes</a>
-    <a class="btn btn-green" href="/squad">View Squads</a>
+    <a class="btn btn-green" href="/hero/new">View Heroes</a>
+    <a class="btn btn-green" href="/squad/new">View Squads</a>
 
     <a href="/">Go Back</a>
 {{/partial}}
