--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -8,10 +8,7 @@
     {{/each}}
     {{else}}
     {{/if}}
-    <form action="/hero/new" method="POST">
-        <!--<button class="">Create Hero</button></a>
-        <label for="content">Post Content</label>
-        <input id="content" name="content" type="text">-->
+    <form action="/hero" method="POST">
         <button type="submit" class="btn btn-default"><a href="/hero-form">Add your hero</a></button>
     </form>
 
