--- a/src/main/resources/templates/squad-form.hbs
+++ b/src/main/resources/templates/squad-form.hbs
@@ -1,26 +1,21 @@
 {{#partial "content"}}
+    <h1>Add a new Squad!</h1>
+    <form action="/squad/new" method="post">
+        <div class="form-group">
+            <label for="maxsize">Squad max size</label>
+            <input id="maxsize" type="number" placeholder="Enter your squad's maximum size" class="form-control" name="maxSize" required>
+        </div>
 
-    {{#if editSquad}}
-        <h1>Edit this squad!</h1>
-        <form action="/squad/{{editSquad.id}}/update" method="post">
-            <label for="squadDetails">Edit this squad</label>
-            <input id="maxSize" name="maxSize" type="number" value="{{editSquad.maxSize}}">
-            <input id="name" name="name" type="text" value="{{editSquad.name}}">
-            <input id="cause" name="cause" type="text" value="{{editSquad.cause}}">
-        </form>
+        <div class="form-group">
+            <label for="name">Squad name</label>
+            <input id="name" type="text"  placeholder="Enter your squad name" class="form-control" name="name" required>
+        </div>
 
-    {{else}}
-        <h1>Add a new Squad!</h1>
+        <div class="form-group">
+            <label for="cause">Squad mission</label>
+            <input id="cause" type="text" placeholder="Enter mission" class="form-control" name="cause" required>
+        </div>
 
-        <form action="/squad/new" method="post">
-            <input type="number" placeholder="Enter the max size" name="maxSize" required>
-            <input type="text" placeholder="Enter the squad name" name="name" required>
-            <input type="text" placeholder="Enter mission" name="cause" required>
-
-            <!-- <label for="content">Post Content</label>
-             <input id="content" name="content" type="text">-->
-
-    {{/if}}
         <button type="submit" class="btn btn-default">Go!</button>
     </form>
 
