--- a/src/main/resources/templates/hero-details.hbs
+++ b/src/main/resources/templates/hero-details.hbs
@@ -1,11 +1,12 @@
 {{#partial "content"}}
-    <p>Heroes:</p>
-    <p>{{ hero.name }}</p>
-    <p>{{ hero.age }}</p>
-    <p>{{ hero.specialPower }}</p>
-    <p>{{ hero.weakness }}</p>
-    <h5>Created At:</h5>
-    <p> {{ hero.createdAt }}</p>
+    <p xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+       xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+       xmlns="http://www.w3.org/1999/html"><strong>Heroes:</strong></p>
+    <p><strong>Hero Name:</strong> {{ hero.name }}</p>
+    <p><strong>Age:</strong> {{ hero.age }}</p>
+    <p><strong>Special Power:</strong> {{ hero.specialPower }}</p>
+    <p><strong>Weakness:</strong> {{ hero.weakness }}</p>
+    <h5><strong>Created At:</strong> {{ hero.createdAt }}</h5>
     <h5>Heroes status:</h5>
     <p>
         {{#if hero.published }}
