--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -5,7 +5,7 @@
         <div class="land-right">
         </div>
         <h2> <a class="btn" href="/hero-form" >Create Your Hero</a> <br><br> CURRENT HEROES</h2>
-        <div class="hero">
+        <div class="hero" href="/hero/new">
             {{#each hero}}
                 <div class="hero-item">
                     <img src="/images/" alt="">
