--- a/src/main/resources/templates/squad-form.hbs
+++ b/src/main/resources/templates/squad-form.hbs
@@ -17,6 +17,7 @@
         </div>
 
         <button type="submit" class="btn btn-default">Go!</button>
+        <button><a href="/">Go Back</a></button>
     </form>
 
 {{/partial}}
