--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -5,7 +5,7 @@
         <div class="land-right">
         </div>
         <h2> <a class="btn" href="/squad-form" >Create Your Squad</a> <br><br> CURRENT SQUADS</h2>
-        <div class="squad">
+        <div class="squad" href="/squad">
             {{#each squad}}
                 <div class="squad-item">
                     <img src="/images/" alt="">
