--- a/src/main/resources/templates/hero-details.hbs
+++ b/src/main/resources/templates/hero-details.hbs
@@ -9,7 +9,7 @@
     <h5><strong>Created At:</strong> {{ hero.createdAt }}</h5>
     <h5>Heroes status:</h5>
     <p>
-        {{#if hero.published }}
+        {{#if hero.updated }}
             <span class="glyphicon glyphicon-star" aria-hidden="true"></span>  Published
         {{else}}
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
