--- a/src/main/resources/templates/squad-detail.hbs
+++ b/src/main/resources/templates/squad-detail.hbs
@@ -6,7 +6,7 @@
     <h5><strong>Created At:</strong> {{ squad.createdAt }}</h5>
     <h5>Squad status:</h5>
     <p>
-        {{#if squad.published }}
+        {{#if squad.updated }}
             <span class="glyphicon glyphicon-star" aria-hidden="true"></span>  Published
         {{else}}
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
