--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -16,6 +16,10 @@
                     <a href="new/{{id}}" class="btn">Learn More</a>
                     <a href="/squad" class="btn">Add {{ name }} To Squad</a>
                 </div>
+            <div class="container">
+                <button class="text-muted"><a href="/hero/delete">DELETE ALL HEROES</a></button>
+                <button class="text-muted"><a href="/squad/delete">DELETE ALL SQUADS</a></button>
+            </div>
         </div>
     </section>
 {{/partial}}
