--- a/src/main/resources/templates/hero-details.hbs
+++ b/src/main/resources/templates/hero-details.hbs
@@ -14,7 +14,7 @@
         {{else}}
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
         {{/if}}
-        <a href="/hero/{{hero.id}}/update">Edit this hero</a>
+        <a style="background-color:black;" href="/hero/{{hero.id}}/update">Edit this hero</a>
         <a href="/hero/{{hero.id}}/delete">DELETE this hero (no undo)</a>
     </p>
 {{/partial}}
