--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,8 +1,6 @@
 {{#partial "content"}}
 
-    <h3>Success! <br>  <span>{{ item }} </span> <br> Has been created <br>{{Id}}</h3>
-
-    Your blog post has been saved.
+    <h3>Success! <br>  <span>{{ item }} </span> <br> DONE <br>{{Id}}</h3>
     <a class="btn btn-green" href="/hero">View Heroes</a>
     <a class="btn btn-green" href="/squad">View Squads</a>
 
