--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -1,7 +1,7 @@
 {{#partial "content"}}
 
         <h1>Add a new Hero!</h1>
-        <form action="/hero" href="/hero" method="post" style="background-color:black;padding:100px;">
+        <form action="/hero" href="/hero" method="post" style="padding:100px;">
             <div class="form-group">
                 <label for="name">Hero's name</label>
                 <input id="name" type="text" placeholder="Enter your hero's name" class="form-control" name="name" required>
