--- a/src/main/resources/templates/squad-form.hbs
+++ b/src/main/resources/templates/squad-form.hbs
@@ -1,6 +1,6 @@
 {{#partial "content"}}
     <h1>Add a new Squad!</h1>
-    <form action="/squad/new" method="post">
+    <form action="/squad" method="post" style="padding:100px;">
         <div class="form-group">
             <label for="maxsize">Squad max size</label>
             <input id="maxsize" type="number" placeholder="Enter your squad's maximum size" class="form-control" name="maxSize" required>
