--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -3,14 +3,14 @@
     <h1>Hero list! <a href="/hero">CHECK!</a></h1>
         {{#each myHeroes }}
             <p>Current heroes: {{ name }} <a href="/hero/{{id}}">details...</a></p>
+            <p>Add heroes <a href="/hero-form">here</a></p>
         {{/each}}
 
 
-    <h1>Squad list!</h1>
-
+    <h1>Squad list! <a href="/squad">CHECK!</a></h1>
         {{#each mySquads }}
-            <p>Current squads:</p>
-            <p>{{ name }} <a href="/squad/{{id}}">details...</a></p>
+            <p>Current squads: {{ name }} <a href="/squad/{{id}}">details...</a></p>
+            <p>Add squad <a href="/squad-form">here</a></p>
         {{/each}}
 
 {{/partial}}
