--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,31 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{#block "title"}}HERO-SQUAD{{/block}}</title>
+{{#block "header"}}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="/css/style.css">
+        <title>Document</title>
+    </head>
+    <body>
+    <header>
+        <hr class="nav-hr">
+        <a href="/images/choiceB1.jpg"><img src="">
+        </a>
+        <nav>
+            <ul>
+                <a href="/"><li>Home</li></a>
+                <a href="/hero"><li>Hero</li></a>
+                <a href="/squad"><li>Squad</li></a>
+            </ul>
+        </nav>
+    </header>
+{{/block}}
+{{#block "content"}}
 
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-</head>
-<body style="background-image:url(/images/choiceB1.jpg);background-repeat:no repeat;color:white;">
-<ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#">HOME</a></li>
-    <li role="presentation"><a href="/hero">HEROES</a></li>
-    <li role="presentation"><a href="/squad">SQUADS</a></li>
-</ul>
-<div class="container">
-    <!--begin main template-->
-    <div class="page-header">
-        <h1>Anyone can be A HERO. <small>Just try!</small></h1>
-    </div>
-
-    <div class="col-md-12">
-        {{#block "content"}}
-        {{/block}}
-    </div>
-</div>
-<!--end main template-->
+{{/block}}
 {{#block "footer"}}
-    <footer class="footer">
-    </footer>
+    <script src="/js/jquery-3.4.0.min.js"></script>
+    <script src="/js/script.js"></script>
     </body>
     </html>
 {{/block}}
