--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,7 +7,7 @@
         <div class="hero-img">
         </div>
         <div class="hero-desc">
-            <h3>Let's Make You  a Hero</h3>
+            <h3>Be The Hero You Want!</h3>
             <a href="/hero-form"><button class="hero-btn btns">Create Hero</button></a>
         </div>
     </section>
